2012-02-16  Jeffrey Stedfast  <jeff@xamarin.com>

	* mono/Multipart.custom: Fixed the binding for Multipart.Count.

2012-02-04  Jeffrey Stedfast  <fejj@gnome.org>

	* configure.ac: Added --with-gacdir to fix bug #667072

2012-01-11  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/Makefile.am: Fixed up to more closely match the gtk-sharp
	build.

	* mono/gmime-sharp.pc.in: Fixed to more closely match gtk-sharp.

2012-01-11  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-pkcs7-context.c: Fixed some switch statements to
	include a 'default' code path, fixing some compiler
	warnings. Fixes bug #667684.

2012-01-09  Ionut Biru  <ibiru@archlinux.org>

	* gmime/gmime-pkcs7-context.c: Fix compilation when S/MIME is not
	enabled.

2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.4

2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	Fix for bug #667070

	* configure.ac: Fixed Docbook checks for the html and pdf converters.

	* docs/tutorial/Makefile.am: Use the DB2HTML and DB2PDF variables.

2012-01-05  Jeffrey Stedfast  <jeff@xamarin.com>

	Fixes for bug #667137.

	* tests/Makefile.am: If any tests fail, exit with an error to
	abort make.

	* tests/testsuite.c (testsuite_exit): Simply return
	total_errors.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	Fixes for bug #667072.

	* mono/Makefile.am: Install to $(libdir) instead of $(prefix)/libdir.

	* mono/gmime-sharp.pc.in: Set libdir to @libdir@

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* src/Makefile.am: Rename uuencode/uudecode to
	gmime-uuencode/decode to prevent naming collisions with the GNU
	Sharutils tools. Fixes bug #667073.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Fixed returns
	without a return value. Also fixed up some error-handling.

2012-01-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_decode_tokens): Fixed a memory leak.
