@@ -49,6 +49,7 @@ typedef struct _GMimeObjectStack GMimeObjectStack;
 struct _GMimeObjectStack {
 	GMimeObjectStack *parent;
 	GMimeObject *object;
+	gboolean indexed;
 };
 
 struct _GMimePartIter {
@@ -68,6 +69,7 @@ g_mime_part_iter_push (GMimePartIter *iter, GMimeObject *object, int index)
 		g_array_append_val (iter->path, index);
 	
 	node = g_slice_new (GMimeObjectStack);
+	node->indexed = index != -1;
 	node->parent = iter->parent;
 	node->object = object;
 	iter->parent = node;
@@ -82,8 +84,10 @@ g_mime_part_iter_pop (GMimePartIter *iter)
 	if (!iter->parent || !iter->parent->parent)
 		return FALSE;
 	
-	iter->index = g_array_index (iter->path, int, iter->path->len - 1);
-	g_array_set_size (iter->path, iter->path->len - 1);
+	if (iter->parent->indexed) {
+		iter->index = g_array_index (iter->path, int, iter->path->len - 1);
+		g_array_set_size (iter->path, iter->path->len - 1);
+	}
 	
 	iter->current = iter->parent->object;
 	
@@ -214,24 +218,30 @@ g_mime_part_iter_jump_to (GMimePartIter *iter, const char *path)
 		index--;
 		
 		if (GMIME_IS_MESSAGE_PART (parent)) {
-			if (index != 0)
-				return FALSE;
-			
 			message_part = (GMimeMessagePart *) parent;
 			if (!(message = g_mime_message_part_get_message (message_part)))
 				return FALSE;
 			
-			if (!(current = g_mime_message_get_mime_part (message)))
+			if (!(parent = g_mime_message_get_mime_part (message)))
 				return FALSE;
 			
-			iter->index = 0;
+			if (!GMIME_IS_MULTIPART (parent))
+				return FALSE;
+			
+			goto multipart;
 		} else if (GMIME_IS_MULTIPART (parent)) {
+		multipart:
 			multipart = (GMimeMultipart *) parent;
 			if (index >= g_mime_multipart_get_count (multipart))
 				return FALSE;
 			
 			current = g_mime_multipart_get_part (multipart, index);
 			iter->index = index;
+		} else if (GMIME_IS_MESSAGE (parent)) {
+			if (!(current = g_mime_message_get_mime_part (message)))
+				return FALSE;
+			
+			iter->index = -1;
 		} else {
 			return FALSE;
 		}
@@ -302,11 +312,19 @@ g_mime_part_iter_next (GMimePartIter *iter)
 		if (mime_part != NULL) {
 			g_mime_part_iter_push (iter, iter->current, iter->index);
 			iter->current = mime_part;
+			
+			if (GMIME_IS_MULTIPART (mime_part)) {
+				iter->index = -1;
+				goto multipart;
+			}
+			
 			iter->index = 0;
+			
 			return TRUE;
 		}
 	} else if (GMIME_IS_MULTIPART (iter->current)) {
 		/* descend into our children */
+	multipart:
 		multipart = (GMimeMultipart *) iter->current;
 		if (g_mime_multipart_get_count (multipart) > 0) {
 			g_mime_part_iter_push (iter, iter->current, iter->index);
@@ -428,6 +446,9 @@ GMimeObject *
 g_mime_part_iter_get_parent (GMimePartIter *iter)
 {
 	g_return_val_if_fail (iter != NULL, NULL);
+	
+	if (!g_mime_part_iter_is_valid (iter))
+		return NULL;
 	
 	return iter->parent->object;
 }
