@@ -1,3 +1,8 @@
+2012-02-17  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime-part-iter.c: Fixed to behave the same as IMAP and
+	also to actually work.
+
 2012-02-16  Jeffrey Stedfast  <jeff@xamarin.com>
 
 	* mono/Multipart.custom: Fixed the binding for Multipart.Count.
